<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="115dp"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"></android.support.v7.widget.Toolbar>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />

            <Button
                android:id="@+id/lastpage"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/lastpage" />

            <Button
                android:id="@+id/overview"
                android:layout_width="403dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="4"
                android:layout_row="1"
                android:text="@string/overview" />
        </GridLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.banks.myapplication.LetterPage">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true">

            </android.support.design.widget.CoordinatorLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_below="@+id/gridLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="ContentDescription,NotSibling"
                android:contentDescription="" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
